Edited description left side bar

--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -39,10 +39,17 @@
                     </div>
                   </div>
                   <p>
-                    Bike Planner is a web application which could provide real
-                    time bikes and bikes prediction information for the user. It
-                    helps users find the nearest bike station and show related
-                    information for that station
+                    The BikePlanner Application is a solution to remove all possible friction of biking with DublinBikes, the shared bike scheme run by Dublin City Council. 
+                    It is build to be a potential extension of the website www.dublinbikes.com. The Application could however be customized and delivered to any other bike sharing scheme provider that offers similar bike data services
+                    <BR><BR>                    
+                    The BikePlanner helps users of DublinBikes, finding the nearest available bike and/or empty docking station to return the bike.
+                    It provides next-hour-availability predictions with accuracy rates up to 80%.The internal cache system stores data from API requests to make maximum use of the least possible requests from the API’s of third parties. 
+                    While they limit 5000 requests a day, this application is able to serve millions of requests if needed. The Data Collection Server fetches and saves 10,000 records within 10 seconds.The application provides real time prediction data based on a machine learning algorithm while keeping acceptable response times.
+                    <BR><BR>
+                    The DublinBikes Project is part of the Software Engineering module of the Computer Science conversion course. 
+                    It is the first group project of the program where the students explore Scrum and agile development methodologies.
+                    Software Engineering (COMP 30830) is a core module on the MSc Computer Science (Conversion) and Higher Diploma in Computer Science Programmes. 
+                    Software engineering focuses on the processes and techniques fundamental to the creation of reliable, software systems.
                   </p>
                 </div>
               </div>
