--- a/src/web/static/index.html
+++ b/src/web/static/index.html
@@ -69,7 +69,7 @@
                     <div class="item">
                       <img
                         class="ui avatar image"
-                        src="https://avatars.dicebear.com/v2/avataaars/wwwer.svg"
+                        src="https://avatars.dicebear.com/v2/avataaars/scarlet.svg?options[top][]=longHair&options[hairColor][]=blonde&options[facialHairColor][]=blonde&options[clothes][]=shirt&options[clothes][]=hoodie&options[clothesColor][]=black&options[eyes][]=happy&options[mouth][]=defaultValue&options[mouth][]=smile&options[skin][]=light"
                       />
                       <div class="content">
                         <div class="header">Scarlet Grant</div>
